# internal/app/handlers/requests/subject_model.go
@@ -1,0 +1,12 @@
+package requests
+
+type GetSubject struct {
+	ProtocolID int `json:"protocol_id"`
+}
+
+type AddSubject struct {
+	Number     string `json:"number"`
+	Initials   string `json:"initials"`
+	CenterId   int    `json:"center_id"`
+	ProtocolId int    `json:"protocol_id"`
+}
