# internal/app/handlers/responses/subject_model.go
@@ -1,0 +1,17 @@
+package responses
+
+import (
+	"time"
+
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
+type GetSubject struct {
+	ID         primitive.ObjectID `json:"_id"`
+	CreatedAt  time.Time          `json:"created_at"`
+	UpdatedAt  time.Time          `json:"updated_at"`
+	Number     string             `json:"number"`
+	CenterID   int                `json:"center_id" `
+	ProtocolId int                `json:"protocol_id"`
+	Initials   string             `json:"initials"`
+}
